--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
@@ -19,7 +22,7 @@
     "sucrase": "^3.17.1"
   },
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "nodemon ./src/server.js SET NODE_ENV=development",
     "build": "sucrase ./src -D ./dist --transforms imports",
     "start": "node -r dotenv/config ./dist server.js"
   }
